--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dependencies": {
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.27",
-        "tailwindcss": "^3.3.3",
-        "tw-elements": "^1.0.0-beta3"
+        "tailwindcss": "^3.3.3"
     }
 }
